--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -35,8 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:stretchColumns="0,2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:stretchColumns="0,2">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -71,6 +71,7 @@
         </TableLayout>
 
         <Button
+            android:id="@+id/btnVerMais"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
